[package]
name = "fastq_io_bench"
version = "0.1.0"
edition = "2021"
authors = ["BENM(Binxiao) FENG <binxiaofeng@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastq = "0.6.0"
bio = "1.1.0"
seq_io = "0.3.1"
lz4 = "1.24.0"
fastx = "0.2.0"
needletail = "0.5.0"