[package]
name = "api-gateway"
version = "0.1.0"
authors = ["BENM FENG <binxiaofeng@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-cors = "0.4.0"
actix-rt = "1.1.0"
juniper_warp = "0.6.0"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
juniper = "0.14.2"
capnp = "0.14.0"
capnp-rpc = "0.14.0"
futures = "0.3.0"
async-std = { version = "1.8.0", features = ["unstable"] }

[build-dependencies]
capnpc = "0.14.1"
